WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219914
Flaky crash under AudioBuffer::channelData() when running layout tests
https://bugs.webkit.org/show_bug.cgi?id=219914
Summary
Flaky crash under AudioBuffer::channelData() when running layout tests
Chris Dumez
Reported
2020-12-15 12:37:37 PST
Flaky crash under AudioBuffer::channelData() when running layout tests: Thread 19 Crashed:: RemoteAudioDestinationProxy render thread 0 com.apple.JavaScriptCore 0x0000000777d4bb6e WTFCrash + 14 (Assertions.cpp:295) 1 com.apple.WebCore 0x0000000757797f61 WTF::RefCountedBase::applyRefDerefThreadingCheck() const + 177 (RefCounted.h:114) 2 com.apple.WebCore 0x00000007577ca85c WTF::RefCountedBase::ref() const + 28 (RefCounted.h:43) 3 com.apple.WebCore 0x0000000757d52637 WTF::DefaultRefDerefTraits<JSC::GenericTypedArrayView<JSC::Float32Adaptor> >::refIfNotNull(JSC::GenericTypedArrayView<JSC::Float32Adaptor>*) + 55 (RefPtr.h:36) 4 com.apple.WebCore 0x0000000757d525f4 WTF::RefPtr<JSC::GenericTypedArrayView<JSC::Float32Adaptor>, WTF::RawPtrTraits<JSC::GenericTypedArrayView<JSC::Float32Adaptor> >, WTF::DefaultRefDerefTraits<JSC::GenericTypedArrayView<JSC::Float32Adaptor> > >::RefPtr(JSC::GenericTypedArrayView<JSC::Float32Adaptor>*) + 36 (RefPtr.h:61) 5 com.apple.WebCore 0x0000000757d5162d WTF::RefPtr<JSC::GenericTypedArrayView<JSC::Float32Adaptor>, WTF::RawPtrTraits<JSC::GenericTypedArrayView<JSC::Float32Adaptor> >, WTF::DefaultRefDerefTraits<JSC::GenericTypedArrayView<JSC::Float32Adaptor> > >::RefPtr(JSC::GenericTypedArrayView<JSC::Float32Adaptor>*) + 29 (RefPtr.h:61) 6 com.apple.WebCore 0x0000000759a29a36 WTF::RefPtr<JSC::GenericTypedArrayView<JSC::Float32Adaptor>, WTF::RawPtrTraits<JSC::GenericTypedArrayView<JSC::Float32Adaptor> >, WTF::DefaultRefDerefTraits<JSC::GenericTypedArrayView<JSC::Float32Adaptor> > >::copyRef() const & + 38 (RefPtr.h:104) 7 com.apple.WebCore 0x0000000759a29872 WebCore::AudioBuffer::channelData(unsigned int) + 194 (AudioBuffer.cpp:169) 8 com.apple.WebCore 0x0000000759b02e81 WebCore::ScriptProcessorNode::process(unsigned long) + 1281 (ScriptProcessorNode.cpp:170) 9 com.apple.WebCore 0x0000000759a577ae WebCore::AudioNode::processIfNecessary(unsigned long) + 462 (AudioNode.cpp:474) 10 com.apple.WebCore 0x0000000759a5a127 WebCore::AudioNodeOutput::pull(WebCore::AudioBus*, unsigned long) + 407 (AudioNodeOutput.cpp:120) 11 com.apple.WebCore 0x0000000759a59ef6 WebCore::AudioNodeInput::sumAllConnections(WebCore::AudioBus*, unsigned long) + 566 (AudioNodeInput.cpp:193) 12 com.apple.WebCore 0x0000000759a51da7 WebCore::AudioNodeInput::pull(WebCore::AudioBus*, unsigned long) + 295 (AudioNodeInput.cpp:221) 13 com.apple.WebCore 0x0000000759a51949 WebCore::AudioDestinationNode::render(WebCore::AudioBus*, WebCore::AudioBus*, unsigned long, WebCore::AudioIOPosition const&) + 457 (AudioDestinationNode.cpp:91)
Attachments
Patch
(4.44 KB, patch)
2020-12-15 12:48 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-12-15 12:48:43 PST
Created
attachment 416281
[details]
Patch
Geoffrey Garen
Comment 2
2020-12-16 18:53:00 PST
Comment on
attachment 416281
[details]
Patch R=me
EWS
Comment 3
2020-12-16 19:16:48 PST
Committed
r270924
: <
https://trac.webkit.org/changeset/270924
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 416281
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-12-16 19:17:20 PST
<
rdar://problem/72410113
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug