Flaky crash under AudioBuffer::channelData() when running layout tests https://bugs.webkit.org/show_bug.cgi?id=219914

Reviewed by Geoffrey Garen.

The issue was that AudioBuffer::channelData() returns a RefPtr<Float32Array>,
Float32Array not being ThreadSafeRefCounted. The AudioBuffers in ScriptProcessorNode
are constructed on the main thread but ScriptProcessorNode::process() was calling
AudioBuffer::channelData() on the audio rendering thread. This would do some
non-thread-safe refcounting churn which would cause the crashes.

To address the issue, I introduced AudioBuffer::rawChannelData() which returns
the data as a float*, without any refcounting. I ported ScriptProcessorNode::process()
to use AudioBuffer::rawChannelData() instead of AudioBuffer::channelData().

No new tests, covered by existing layout tests that are flakily crashing.

* Modules/webaudio/AudioBuffer.cpp:
(WebCore::AudioBuffer::rawChannelData):
* Modules/webaudio/AudioBuffer.h:
* Modules/webaudio/ScriptProcessorNode.cpp:
(WebCore::ScriptProcessorNode::process):


Canonical link: https://commits.webkit.org/232547@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270924 268f45cc-cd09-0410-ab3c-d52691b4dbfc